--- a/e1/index.html
+++ b/e1/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-   <meta charset="utf-8">
-   <title>AVT 217 Exercise 1</title>
+  <head>
+    <meta charset="utf-8">
+    <title>AVT 217 Exercise 1</title>
+  </head>
   <body>
     <h1>Sharon O'Boyle's Answers to Questions for Exercise 1</h1>
     <h2>Question 1</h2>
@@ -62,12 +63,10 @@
     <p>What's a few things you have on your bucket list before moving on to the next life?</p>
     <p>Answer: Becoming fluent in French, visiting every state in th US, earning another degree</p>
     <h2>Question 19</h2>
-    <p>Question 19?</p>
-    <p>Answer: 19</p>
+    <p>If you could be any animal, what would you be?</p>
+    <p>Answer: A wild horse</p>
     <h2>Question 20</h2>
-    <p>Question 20?</p>
-    <p>Answer: 20</p>
+    <p>What has the pandemic made you miss the most?</p>
+    <p>Answer: Spending time with my family and friends</p>
   </body>
-</head>
-
 </html>
