--- a/e2/index.html
+++ b/e2/index.html
@@ -14,6 +14,6 @@
     <h4>Grid 4</h4>
     <img alt="Jeweltone Shapes"  src="images/art4.png">
     <h4>Grid 5</h4>
-    <img alt="patriotic Stars"  src="images/art5.png">
+    <img alt="Patriotic Stars"  src="images/art5.png">
   </body>
 </html>
