--- a/p1/page10/index.html
+++ b/p1/page10/index.html
@@ -9,6 +9,6 @@
     <p>And whatever your labors and aspirations, in the noisy confusion of life, keep peace in your soul.</p>
     <p>With all its sham, drudgery and broken dreams, it is still a beautiful world.</p>
     <p>Be cheerful.</p>
-    <p>Strive to be happy.</p>
+    <p>Strive to be <a href="../index.html">happy.</a></p>
   </body>
 </html>
