--- a/p1/page2/index.html
+++ b/p1/page2/index.html
@@ -5,6 +5,6 @@
     <title>AVT 217 Project 1</title>
   </head>
   <body>
-    <p>GO PLACIDLY amid the noise and the haste, and remember what peace there may be in silence.</p>
+    <p> GO PLACIDLY amid the noise and the haste, and remember what peace there may be in <a href="../page3/index.html">silence.</a></p>
   </body>
 </html>
