--- a/p1/page3/index.html
+++ b/p1/page3/index.html
@@ -5,6 +5,6 @@
     <title>AVT 217 Project 1</title>
   </head>
   <body>
-    <p>As far as possible, without surrender, be on good terms with all persons.</p>
+    <p>As far as possible, without surrender, be on good terms with all <a href="../page4/index.html">persons.</a></p>
   </body>
 </html>
