--- a/p1/page4/index.html
+++ b/p1/page4/index.html
@@ -5,6 +5,7 @@
     <title>AVT 217 Project 1</title>
   </head>
   <body>
-    <p>Speak your truth quietly and clearly; and listen to others, even to the dull and the ignorant; they too have their story.</p>
+    <p>Speak your truth quietly and clearly; and listen to others, even to the dull and the ignorant;
+         they too have their <a href="../page5/index.html">story.</a></p>
   </body>
 </html>
