--- a/p1/page6/index.html
+++ b/p1/page6/index.html
@@ -8,6 +8,7 @@
     <p>Enjoy your achievements as well as your plans.</p>
     <p>Keep interested in your own career, however humble; it is a real possession in the changing fortunes of time.</p>
     <p>Exercise caution in your business affairs, for the world is full of trickery.</p>
-    <p>But let this not blind you to what virtue there is; many persons strive for high ideals, and everywhere life is full of heroism.</p>
+    <p>But let this not blind you to what virtue there is; many persons strive for high ideals,
+         and everywhere life is full of <a href="../page7/index.html">heroism.</a></p>
   </body>
 </html>
