--- a/p1/page7/index.html
+++ b/p1/page7/index.html
@@ -7,6 +7,6 @@
   <body>
     <p>Be yourself. Especially do not feign affection.</p>
     <p>Neither be cynical about love; for in the face of all aridity and disenchantment, it is as perennial as the grass.</p>
-    <p>Take kindly the counsel of the years, gracefully surrendering the things of youth.</p>
+    <p>Take kindly the counsel of the years, gracefully surrendering the things of <a href="../page8/index.html">youth.</a></p>
   </body>
 </html>
