--- a/p1/page8/index.html
+++ b/p1/page8/index.html
@@ -7,6 +7,6 @@
   <body>
     <p>Nurture strength of spirit to shield you in sudden misfortune.</p>
     <p>But do not distress yourself with dark imaginings.</p>
-    <p>Many fears are born of fatigue and loneliness.</p>
+    <p>Many fears are born of fatigue and <a href="../page9/index.html">loneliness.</a></p>
   </body>
 </html>
