--- a/p1/page9/index.html
+++ b/p1/page9/index.html
@@ -7,6 +7,6 @@
   <body>
     <p>Beyond a wholesome discipline, be gentle with yourself.</p>
     <p>You are a child of the universe no less than the trees and the stars; you have a right to be here.</p>
-    <p>And whether or not it is clear to you, no doubt the universe is unfolding as it should.</p>
+    <p>And whether or not it is clear to you, no doubt the universe is unfolding as it <a href="../page10/index.html">should.</a></p>
   </body>
 </html>
