--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
     <h1>Sharon O'Boyle's Work</h1>
     <h3>Exercises</h3>
     <ul>
-      <li>e1: 2- questions</li>
-      <li>e2: Make the Grid</li>
+      <li><a href="e1/index.html">e1: 20 Questions</a></li>
+      <li><a href="e2/index.html">e2: Make the Grid</a></li>
     </ul>
     <h3>Projects</h3>
     <ul>
-      <li>p1: Linking Narratives</li>
-      <li>e2: Make the Grid</li>
+      <li><a href="p1/index.html">p1: Linking Narratives</a></li>
     </ul>
   </body>
 </html>
