--- a/p1/index.html
+++ b/p1/index.html
@@ -5,7 +5,7 @@
     <title>AVT 217 Project 1</title>
   </head>
   <body>
-    <h1>Desiderata</h1>
+    <h1><a href="page2/index.html"> Desiderata</a></h1>
     <h3>Max Ehrmann</h3>
   </body>
 </html>
