--- a/p1/page5/index.html
+++ b/p1/page5/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <p>Avoid loud and aggressive persons; they are vexations to the spirit.</p>
-    <p>If you compare yourself with others, you may become vain or bitter, for always there will be greater and lesser persons than yourself.</p>
+    <p>If you compare yourself with others, you may become vain or bitter,
+        for always there will be greater and lesser persons than <a href="../page6/index.html">yourself.</a></p>
   </body>
 </html>
