updating main page for e3

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
       <li><a href="e1/index.html">e1: 20 Questions</a></li>
       <li><a href="e2/index.html">e2: Make the Grid</a></li>
+      <li><a href="e3/index.html">e3: Organization and Naming</a></li>
     </ul>
     <h3>Projects</h3>
     <ul>
