--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <li><a href="e2/index.html">e2: Make the Grid</a></li>
       <li><a href="e3/index.html">e3: Organization and Naming</a></li>
       <li><a href="e4/index.html">e4: Site Map</a></li>
+      <li><a href="e4/index.html">e5: Wireframes</a></li>
     </ul>
     <h3>Projects</h3>
     <ul>
