--- a/e4/index.html
+++ b/e4/index.html
@@ -8,6 +8,8 @@
     <h4>e4:Site Map</h4>
     <p>Centre Ridge Regent Website</p>
     <p><a href="https://centreridgeregent.org/">Centre Ridge Regent</a></p>
+    <p>Intended Audience: Centre Ridge Regent Residents</p>
+    <p>Primary Action: Residents find information about: amenities, committees, architectural changes, and trash/recycling</p>
     <img alt="CRR Site Map"  src="images/e4.png">
     </body>
 </html>
