--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Sharon O'Boyle</title>
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <h1>Sharon O'Boyle's Work</h1>
@@ -13,6 +14,7 @@
       <li><a href="e3/index.html">e3: Organization and Naming</a></li>
       <li><a href="e4/index.html">e4: Site Map</a></li>
       <li><a href="e5/index.html">e5: Wireframes</a></li>
+      <li><a href="e6/index.html">e5: Type on Screen</a></li>
     </ul>
     <h3>Projects</h3>
     <ul>
