--- a/p1/index.html
+++ b/p1/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
+<!-- p1 home page -->
 <html>
   <head>
     <meta charset="utf-8">
     <title>AVT 217 Project 1</title>
+   <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <h1><a href="page2/index.html"> Desiderata</a></h1>
