--- a/p1/page10/index.html
+++ b/p1/page10/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
+<!-- p1 page10-->
 <html>
   <head>
     <meta charset="utf-8">
     <title>AVT 217 Project 1</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
     <p>Therefore be at peace with God, whatever you conceive Him to be.</p>
     <p>And whatever your labors and aspirations, in the noisy confusion of life, keep peace in your soul.</p>
     <p>With all its sham, drudgery and broken dreams, it is still a beautiful world.</p>
     <p>Be cheerful.</p>
-    <p>Strive to be <a href="../index.html">happy.</a></p>
+    <p>Strive to be <a href="../page2/index.html">happy.</a></p>
   </body>
 </html>
