--- a/p1/page4/index.html
+++ b/p1/page4/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
+<!-- p1 page4-->
 <html>
   <head>
     <meta charset="utf-8">
     <title>AVT 217 Project 1</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
-    <p>Speak your truth quietly and clearly; and listen to others, even to the dull and the ignorant;
-         they too have their <a href="../page5/index.html">story.</a></p>
+    <p>Speak your truth quietly and clearly; and listen to others, even to the dull and the ignorant; they too have their <a href="../page5/index.html">story.</a></p>
   </body>
 </html>
