--- a/p1/page5/index.html
+++ b/p1/page5/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
+<!-- p1 page5-->
 <html>
   <head>
     <meta charset="utf-8">
     <title>AVT 217 Project 1</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
     <p>Avoid loud and aggressive persons; they are vexations to the spirit.</p>
-    <p>If you compare yourself with others, you may become vain or bitter,
-        for always there will be greater and lesser persons than <a href="../page6/index.html">yourself.</a></p>
+    <p>If you compare yourself with others, you may become vain or bitter, for always there will be greater and lesser persons than <a href="../page6/index.html">yourself.</a></p>
   </body>
 </html>
