--- a/p1/page6/index.html
+++ b/p1/page6/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
+<!-- p1 page6-->
 <html>
   <head>
     <meta charset="utf-8">
     <title>AVT 217 Project 1</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
     <p>Enjoy your achievements as well as your plans.</p>
     <p>Keep interested in your own career, however humble; it is a real possession in the changing fortunes of time.</p>
     <p>Exercise caution in your business affairs, for the world is full of trickery.</p>
-    <p>But let this not blind you to what virtue there is; many persons strive for high ideals,
-         and everywhere life is full of <a href="../page7/index.html">heroism.</a></p>
+    <p>But let this not blind you to what virtue there is; many persons strive for high ideals, and everywhere life is full of <a href="../page7/index.html">heroism.</a></p>
   </body>
 </html>
