--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <li><a href="e4/index.html">e4: Site Map</a></li>
       <li><a href="e5/index.html">e5: Wireframes</a></li>
       <li><a href="e6/index.html">e6: Type on Screen</a></li>
+      <li><a href="e7/index.html">e7: Seven Principles text</a></li>
     </ul>
     <h3>Projects</h3>
     <ul>
