--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <li><a href="e5/index.html">e5: Wireframes</a></li>
       <li><a href="e6/index.html">e6: Type on Screen</a></li>
       <li><a href="e7/index.html">e7: Seven Principles text</a></li>
+      <li><a href="e8/index.html">e8: Visualizing Responsiveness</a></li>
     </ul>
     <h3>Projects</h3>
     <ul>
