--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <h3>Projects</h3>
     <ul>
       <li><a href="p1/index.html">p1: Linking Narratives</a></li>
+        <li><a href="p2_3/index.html">p2_3: First Mobile Designs</a></li>
     </ul>
   </body>
 </html>
