--- a/e1/index.html
+++ b/e1/index.html
@@ -7,8 +7,7 @@
   <body>
     <h1>Sharon O'Boyle's Answers to Questions for Exercise 1</h1>
     <h2>Question 1</h2>
-    <p>What is a game you are currently playing or have recently finished?
-      (you could list maybe your favorite game, could be an app game or any type of game!)</p>
+    <p>What is a game you are currently playing or have recently finished? (you could list maybe your favorite game, could be an app game or any type of game!)</p>
     <p>Answer: I played Christmas Bingo over the holidays.</p>
     <h2>Question 2</h2>
     <p>What is a big achievement that you achieved during quarantine or want to?</p>
@@ -38,8 +37,7 @@
     <p>Adidas or Nike?</p>
     <p>Answer: Definitely Addidas</p>
     <h2>Question 11</h2>
-    <p>If you could ask a question of anyone (living or dead), whom would you ask
-      and what would the question be?</p>
+    <p>If you could ask a question of anyone (living or dead), whom would you ask       and what would the question be?</p>
     <p>Answer: Margaret Mitchell,"Did Scarlett and Rhett ever get back together?"</p>
     <h2>Question 12</h2>
     <p>Have you ever created fan art, fanfiction, or remixed music from a piece of media you like?</p>
