--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
       <li><a href="e6/index.html">e6: Type on Screen</a></li>
       <li><a href="e7/index.html">e7: Seven Principles text</a></li>
       <li><a href="e8/index.html">e8: Visualizing Responsiveness</a></li>
+      <li><a href="e9/index.html">e9: Patterns</a></li>
     </ul>
     <h3>Projects</h3>
     <ul>
       <li><a href="p1/index.html">p1: Linking Narratives</a></li>
-        <li><a href="p2_3/index.html">p2_3: First Mobile Designs</a></li>
+      <li><a href="p2_3/index.html">p2_3: First Mobile Designs</a></li>
     </ul>
   </body>
 </html>
