--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <ul>
       <li><a href="p1/index.html">p1: Linking Narratives</a></li>
       <li><a href="p2_3/index.html">p2_3: First Mobile Designs</a></li>
+      <li><a href="p2_4/index.html">p2_4: Expanding Design to 1440px</a></li>
     </ul>
   </body>
 </html>
