--- a/index.html
+++ b/index.html
@@ -6,24 +6,32 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <h1>Sharon O'Boyle's Work</h1>
-    <h3>Exercises</h3>
-    <ul>
-      <li><a href="e1/index.html">e1: 20 Questions</a></li>
-      <li><a href="e2/index.html">e2: Make the Grid</a></li>
-      <li><a href="e3/index.html">e3: Organization and Naming</a></li>
-      <li><a href="e4/index.html">e4: Site Map</a></li>
-      <li><a href="e5/index.html">e5: Wireframes</a></li>
-      <li><a href="e6/index.html">e6: Type on Screen</a></li>
-      <li><a href="e7/index.html">e7: Seven Principles text</a></li>
-      <li><a href="e8/index.html">e8: Visualizing Responsiveness</a></li>
-      <li><a href="e9/index.html">e9: Patterns</a></li>
-    </ul>
-    <h3>Projects</h3>
-    <ul>
-      <li><a href="p1/index.html">p1: Linking Narratives</a></li>
-      <li><a href="p2_3/index.html">p2_3: First Mobile Designs</a></li>
-      <li><a href="p2_4/index.html">p2_4: Expanding Design to 1440px</a></li>
-    </ul>
+    <header>
+      <h1>Sharon O'Boyle's Work</h1>
+    </header>
+    <main>
+      <div class="col">
+        <h2>Exercises</h3>
+        <ul>
+          <li><a href="e1/index.html">e1: 20 Questions</a></li>
+          <li><a href="e2/index.html">e2: Make the Grid</a></li>
+          <li><a href="e3/index.html">e3: Organization and Naming</a></li>
+          <li><a href="e4/index.html">e4: Site Map</a></li>
+          <li><a href="e5/index.html">e5: Wireframes</a></li>
+          <li><a href="e6/index.html">e6: Type on Screen</a></li>
+          <li><a href="e7/index.html">e7: Seven Principles text</a></li>
+          <li><a href="e8/index.html">e8: Visualizing Responsiveness</a></li>
+          <li><a href="e9/index.html">e9: Patterns</a></li>
+        </ul>
+      </div>
+      <div class="col">
+        <h2>Projects</h3>
+        <ul>
+          <li><a href="p1/index.html">p1: Linking Narratives</a></li>
+          <li><a href="p2_3/index.html">p2_3: First Mobile Designs</a></li>
+          <li><a href="p2_4/index.html">p2_4: Expanding Design to 1440px</a></li>
+        </ul>
+      </div>
+    </main>
   </body>
 </html>
