--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
           <li><a href="e7/index.html">e7: Seven Principles text</a></li>
           <li><a href="e8/index.html">e8: Visualizing Responsiveness</a></li>
           <li><a href="e9/index.html">e9: Patterns</a></li>
-          <li><a href="studio-level1/index.html">Linking Exercise (Week 8)</a></li>      
+          <li><a href="e10/index.html">e10: Layouts</a></li>
+          <li><a href="studio-level1/index.html">Linking Exercise (Week 8)</a></li>
         </ul>
       </div>
       <div class="col">
