--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           <li><a href="p2_3/index.html">p2_3: First Mobile Designs</a></li>
           <li><a href="p2_4/index.html">p2_4: Expanding Design to 1440px</a></li>
           <li><a href="p2_5/index.html">p2_5: Further Refinements</a></li>
+          <li><a href="p2_final/index.html">p2_Final: Final Submission</a></li>
         </ul>
       </div>
     </main>
