--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <li><a href="e9/index.html">e9: Patterns</a></li>
           <li><a href="e10/index.html">e10: Layouts</a></li>
           <li><a href="e11/index.html">e11: CSS Drawing</a></li>
+          <li><a href="e12/index.html">e12: Type on Screen II</a></li>
           <li><a href="studio-level1/index.html">Linking Exercise (Week 8)</a></li>
         </ul>
       </div>
@@ -35,6 +36,7 @@
           <li><a href="p2_4/index.html">p2_4: Expanding Design to 1440px</a></li>
           <li><a href="p2_5/index.html">p2_5: Further Refinements</a></li>
           <li><a href="p2_final/index.html">p2_Final: Final Submission</a></li>
+          <li><a href="p3A_2/index.html">p3A_2: First Build</a></li>
         </ul>
       </div>
     </main>
