--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <li><a href="e10/index.html">e10: Layouts</a></li>
           <li><a href="e11/index.html">e11: CSS Drawing</a></li>
           <li><a href="e12/index.html">e12: Type on Screen II</a></li>
+          <li><a href="e13/index.html">e13: CSS Animation</a></li>
           <li><a href="studio-level1/index.html">Linking Exercise (Week 8)</a></li>
         </ul>
       </div>
@@ -37,6 +38,7 @@
           <li><a href="p2_5/index.html">p2_5: Further Refinements</a></li>
           <li><a href="p2_final/index.html">p2_Final: Final Submission</a></li>
           <li><a href="p3A_2/index.html">p3A_2: First Build</a></li>
+          <li><a href="p3A_3/index.html">p3A_3: Second Build</a></li>
         </ul>
       </div>
     </main>
