--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <li><a href="e11/index.html">e11: CSS Drawing</a></li>
           <li><a href="e12/index.html">e12: Type on Screen II</a></li>
           <li><a href="e13/index.html">e13: CSS Animation</a></li>
+          <li><a href="e14/index.html">e14: jQuery Interactions</a></li>
           <li><a href="studio-level1/index.html">Linking Exercise (Week 8)</a></li>
         </ul>
       </div>
