--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           <li><a href="p2_final/index.html">p2_Final: Final Submission</a></li>
           <li><a href="p3A_2/index.html">p3A_2: First Build</a></li>
           <li><a href="p3A_3/index.html">p3A_3: Second Build</a></li>
+          <li><a href="p3A_final/index.html">p3A: Final</a></li>
         </ul>
       </div>
     </main>
